--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,98 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link rel="stylesheet" href="./stylesheets/main.css">
+  <title>shlee</title>
 </head>
-
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+  <header>
+    <video autoplay loop muted class="header__video">
+      <source src="./videos/reel.mp4" type="video/mp4">
+    </video>
+    <div class="header__cover">
+      <div class="header__showreel">Showreel 2018</div>
+    </div>
+    <div class="nav">
+      <div class="nav__logo-wrap">
+          <div class="nav__logo"></div>
+      </div>
+      <div class="nav__menu-wrap">
+        <div class="nav__menu"></div>
+        <div class="nav__menu-button"></div>
+      </div>
+    </div>
+  </header>
+  <div class="sticky-nav">
+    <div class="sticky-nav__logo-wrap">
+        <div class="sticky-nav__logo"></div>
+    </div>
+    <div class="sticky-nav__menu-wrap">
+      <div class="sticky-nav__menu"></div>
+    </div>
+  </div>
+  <section></section>
+  <div class="loader">
+    <div class="loading-icon"></div>
+  </div>
+  <footer>
+    <div class="footer__logo-wrap">
+      <div class="footer__logo"></div>
+    </div>
+    <div class="footer__info-wrap">
+      <div class="footer__info footer__info--contacts">
+        <div class="footer__info-title">Contacts</div>
+        <div class="footer__info-description">hello@yambo.me</div>
+        <div class="footer__info-description">+972 (0)79 5555 790</div>
+        <div class="footer__app-wrap">
+          <a href="https://www.google.com" class="footer__app"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.google.com" class="footer__app"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.google.com" class="footer__app"><i class="fab fa-behance"></i></a>
+          <a href="https://www.google.com" class="footer__app"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.google.com" class="footer__app"><i class="fab fa-vimeo-v"></i></a>
+        </div>
+      </div>
+      <div class="footer__info footer__info--find-us">
+          <div class="footer__info-title">Find us</div>
+          <div class="footer__info-description">HaYarkon 61 / 1</div>
+          <div class="footer__info-description">Tel-Aviv, 6343217</div>
+          <div class="footer__info-description">Israel</div>
+      </div>
+      <div class="footer__info footer__info--newsletter">
+          <div class="footer__info-title">Newsletter</div>
+          <form action="#" method="POST" class="footer__form" novalidate>
+            <input type="email" class="footer__input" placeholder="Your email address" required><button type="submit" class="footer__submit-button">Subscribe</button>
+          </form>
+          <div class="footer__form-message"></div>
+      </div>
+      <div class="footer__copyright-policy">
+        <div>All artwork on this site are Copyright © 2018 YAMBO Creative, LTD.</div>
+        <div>or their respective copyright holders. Do not use without permission.</div>
+      </div>
+    </div>
+  </footer>
+  <div class="modal">
+    <div class="modal__close-button">
+      <div class="modal__close-button-line1"></div>
+      <div class="modal__close-button-line2"></div>
+    </div>
+    <div class="modal__content">
+      <div class="modal__video-wrap">
+        <div class="modal__video">
+          <iframe width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+        <div class="modal__loading-icon"></div>
+      </div>
+      <div class="modal__details">
+        <div class="modal__title"></div>
+        <div class="modal__description"></div>
+        <div class="modal__more-button">See the full project</div>
+      </div>
+    </div>
+  </div>
+  <script type="module" src="./javascripts/main.js"></script>
 </body>
-
 </html>
