feat: change homepage style

--- a/public/index.html
+++ b/public/index.html
@@ -88,8 +88,10 @@
       </div>
       <div class="modal__details">
         <div class="modal__title"></div>
-        <div class="modal__description"></div>
-        <div class="modal__more-button">See the full project</div>
+        <a class="modal__more-button" href="www.google.com">
+          <div class="modal__more-button-text">See the full project</div>
+          <div class="modal__more-button-underline"></div>
+        </a>
       </div>
     </div>
   </div>
