feat: create sub page(project page) scaffold

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
       </div>
       <div class="modal__details">
         <div class="modal__title"></div>
-        <a class="modal__more-button" href="www.google.com">
+        <a class="modal__more-button" href="">
           <div class="modal__more-button-text">See the full project</div>
           <div class="modal__more-button-underline"></div>
         </a>
