refactor: navigation module
combine menu modules and nav modules to navigation.js(include css)
improve reusability of navigation module

--- a/public/index.html
+++ b/public/index.html
@@ -17,24 +17,8 @@
     <div class="header__cover">
       <div class="header__showreel">Showreel 2018</div>
     </div>
-    <div class="nav">
-      <div class="nav__logo-wrap">
-          <div class="nav__logo"></div>
-      </div>
-      <div class="nav__menu-wrap">
-        <div class="nav__menu"></div>
-        <div class="nav__menu-button"></div>
-      </div>
-    </div>
+    <nav class="navigation navigation--detached"></nav>
   </header>
-  <div class="sticky-nav">
-    <div class="sticky-nav__logo-wrap">
-        <div class="sticky-nav__logo"></div>
-    </div>
-    <div class="sticky-nav__menu-wrap">
-      <div class="sticky-nav__menu"></div>
-    </div>
-  </div>
   <section></section>
   <div class="loader">
     <div class="loading-icon"></div>
