refactor: ui changed(footer, header, loader)
removed footer
replaced header module(header.js) with css
loader will be disappeared when finish load
remove data.js : insert data into main.js

--- a/public/index.html
+++ b/public/index.html
@@ -23,42 +23,7 @@
   <div class="loader">
     <div class="loading-icon"></div>
   </div>
-  <footer>
-    <div class="footer__logo-wrap">
-      <div class="footer__logo"></div>
-    </div>
-    <div class="footer__info-wrap">
-      <div class="footer__info footer__info--contacts">
-        <div class="footer__info-title">Contacts</div>
-        <div class="footer__info-description">hello@yambo.me</div>
-        <div class="footer__info-description">+972 (0)79 5555 790</div>
-        <div class="footer__app-wrap">
-          <a href="https://www.google.com" class="footer__app"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://www.google.com" class="footer__app"><i class="fab fa-linkedin"></i></a>
-          <a href="https://www.google.com" class="footer__app"><i class="fab fa-behance"></i></a>
-          <a href="https://www.google.com" class="footer__app"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.google.com" class="footer__app"><i class="fab fa-vimeo-v"></i></a>
-        </div>
-      </div>
-      <div class="footer__info footer__info--find-us">
-          <div class="footer__info-title">Find us</div>
-          <div class="footer__info-description">HaYarkon 61 / 1</div>
-          <div class="footer__info-description">Tel-Aviv, 6343217</div>
-          <div class="footer__info-description">Israel</div>
-      </div>
-      <div class="footer__info footer__info--newsletter">
-          <div class="footer__info-title">Newsletter</div>
-          <form action="#" method="POST" class="footer__form" novalidate>
-            <input type="email" class="footer__input" placeholder="Your email address" required><button type="submit" class="footer__submit-button">Subscribe</button>
-          </form>
-          <div class="footer__form-message"></div>
-      </div>
-      <div class="footer__copyright-policy">
-        <div>All artwork on this site are Copyright © 2018 YAMBO Creative, LTD.</div>
-        <div>or their respective copyright holders. Do not use without permission.</div>
-      </div>
-    </div>
-  </footer>
+  <footer></footer>
   <div class="modal">
     <div class="modal__close-button">
       <div class="modal__close-button-line1"></div>
