refactor: change file structure(css, js)

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-  <link rel="stylesheet" href="./stylesheets/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700">
+  <link rel="stylesheet" href="/stylesheets/home/main.css">
   <title>shlee</title>
 </head>
 <body>
@@ -45,6 +45,6 @@
       </div>
     </div>
   </div>
-  <script type="module" src="./javascripts/main.js"></script>
+  <script type="module" src="/javascripts/home/main.js"></script>
 </body>
 </html>
