--- a/public/project/index.html
+++ b/public/project/index.html
@@ -4,29 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <style>
-    img {
-      width: 200px;
-    }
-  </style>
+  <title>project</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700">
+  <link rel="stylesheet" href="/stylesheets/project/main.css">
 </head>
 <body>
-  <script>
-    const body = document.body;
-    const template = ({imageUrl}) => {
-      return `<img src="${imageUrl}">`;
-    };
-    const oReq = new XMLHttpRequest();
-    
-    oReq.addEventListener('load', () => {
-      const images = JSON.parse(oReq.response);
-
-      body.innerHTML = images.reduce((html, image) => html + template(image), '');
-    });
-
-    oReq.open('GET', `http://${window.location.host}/api${window.location.pathname}`);
-    oReq.send();
-  </script>
+  <header></header>
+  <script type="module" src="/javascripts/project/main.js"></script>
 </body>
 </html>
