--- a/public/project/index.html
+++ b/public/project/index.html
@@ -5,11 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>project</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400|Roboto:100,300,400,500" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/project/main.css">
 </head>
 <body>
-  <header></header>
+  <nav class="navigation navigation--detached"></nav>
+  <header>
+    <div class="header__content">
+      <img class="header__image" src="" alt="header-image">
+      <div class="header__title"></div>
+    </div>
+  </header>
+  <div class="video-wrap">
+    <div class="video">
+      <div class="video-content">
+        <iframe width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      </div>
+      <div class="video__loading-icon"></div>
+    </div>
+  </div>
+  <section></section>
+  <div class="loader">
+    <div class="loading-icon"></div>
+  </div>
+  <ul class="detail-list"></ul>
   <script type="module" src="/javascripts/project/main.js"></script>
 </body>
 </html>
