--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       <source src="./videos/reel.mp4" type="video/mp4">
     </video>
     <div class="header__cover">
-      <div class="header__showreel">Showreel 2018</div>
+      <div class="header__showreel">Showreel</div>
     </div>
     <nav class="navigation navigation--detached"></nav>
   </header>
